--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,9 +9,9 @@ import { AstroSeo } from "@astrolib/seo";
 Use AstroSeo in all the pages you want different Seo than the index page
 -->
 <AstroSeo
-  title="Mike's starter"
-  description="Your site description goes here"
-  canonical="https://www.michaelandreuzza.com"
+  title="Gooses Int. | Buy A Goose. Support A Goose."
+  description="Gooses International. Solves gooses problems. And sells gooses, to suppport gooses."
+  canonical=""
   openGraph={{
     url: "https://www.michaelandreuzza.com",
     title: "Open Graph Title",
@@ -34,7 +34,7 @@ Use AstroSeo in all the pages you want different Seo than the index page
       { url: "https://www.michaelandreuzza.com/opengraph/social-og.jpg" },
       { url: "https://www.michaelandreuzza.com/opengraph/twitter-og.jpg" },
     ],
-    site_name: "YourSitesName",
+    site_name: "Gooses International",
   }}
   twitter={{
     handle: "@TwitterHandle",
