--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -9,13 +9,13 @@
             <div class="flex items-center text-white">
               <div class="lg:text-center lg:mx-auto">
                 <p class="font-bold italic lg:mx-auto lg:text-4xl text-2xl">
-                  Gooses International.
+                  Gooses Int.
                 </p><p class="text-sm mt-1">
-                  Designed for Gooses<br />by
+                  Founded in Europe<br />by
                   <a
                     href="https://michaelandreuzza.com/"
                     class="underline hover:text-negroni-500 duration-200">
-                    Ultimate Goose.
+                    Gooses.
                   </a>
                 </p>
               </div>
@@ -23,14 +23,6 @@
           </div>
         </div><nav class="flex gap-8 mt-11">
           <a
-            href="https://lexingtonthemes.com/"
-            class="text-negroni-500 -mx-3 -my-2 delay-150 hover:bg-charcoal-600 hover:delay-[0ms] hover:text-negroni-400 px-3 py-2 relative rounded-lg text-sm transition-colors"
-            ><span class="relative z-10">Lexington Themes</span>
-          </a><a
-            href="https://github.com/michael-andreuzza/quickstore"
-            class="text-negroni-500 -mx-3 -my-2 delay-150 hover:bg-charcoal-600 hover:delay-[0ms] hover:text-negroni-400 px-3 py-2 relative rounded-lg text-sm transition-colors"
-            ><span class="relative z-10">Github</span>
-          </a><a
             href="https://twitter.com/lexingtonthemes"
             class="text-negroni-500 -mx-3 -my-2 delay-150 hover:bg-charcoal-600 hover:delay-[0ms] hover:text-negroni-400 px-3 py-2 relative rounded-lg text-sm transition-colors"
             ><span class="relative z-10">Twiter</span>
@@ -40,7 +32,7 @@
     </div><div
       class="flex flex-col border-t border-negroni-500/10 lg:mx-auto lg:text-center md:pt-6 pb-12 pt-8">
       <p class="text-[#fd664e] md:mt-0 mt-6 text-sm">
-        A free template by Lexington Themes
+        2023 All rights reserved. Gooses International
       </p>
     </div>
   </div>
