--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -5,12 +5,12 @@
       <div class="mx-auto text-center">
         <div class="sm:flex sm:justify-center sm:mb-8">
           <div class="text-base tracking-tight text-negroni-500 rounded-full">
-            quickstore
+            Gooses International.
           </div>
         </div>
         <h1
           class="text-negroni-500 mt-4 font-bold sm:text-5xl text-3xl tracking-tight">
-          An Astro and Tailwind CSS template for your store.
+          Buy A Goose You Like.
           <span >
             Display products from services like Gumroad or Lemonsqueezy.
           </span>
