--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -12,18 +12,9 @@
           class="text-negroni-500 mt-4 font-bold sm:text-5xl text-3xl tracking-tight">
           Buy A Goose You Like.
           <span >
-            Display products from services like Gumroad or Lemonsqueezy.
+            Part of the money will be donated for gooses.
           </span>
         </h1>
-        <div class="flex justify-center flex-col gap-3 mt-10 sm:flex-row">
-          <a
-            class="items-center justify-center rounded-full border-negroni-500 duration-200 focus:outline-none inline-flex px-6 py-3 text-center w-full text-negroni-500 font-medium lg:w-auto border focus-visible:outline-negroni-500 text-negroni-500/80"
-            href="https://github.com/michael-andreuzza/quickstore">GitHub</a
-          >
-          <a
-            class="items-center justify-center rounded-full duration-200 focus:outline-none inline-flex px-6 py-3 text-center w-full border-2 hover:bg-transparent border-negroni-500 bg-negroni-500 focus-visible:outline-negroni-500 focus-visible:ring-negroni-500 font-medium hover:border-negroni-500 hover:text-negroni-500 lg:w-auto text-charcoal-500"
-            href="https://lexingtonthemes.com">Lexington Themes &nbsp; →</a
-          >
         </div>
       </div>
     </div>
