--- a/src/components/landing/Products.astro
+++ b/src/components/landing/Products.astro
@@ -6,7 +6,7 @@
       <figure>
         <img
           class="w-full rounded-3xl shadow-2xl"
-          src="./media/goose_1.png"
+          src="../../styles/goose_1.png"
           alt=""
           width="1310"
           height="873"
